--- a/Data Analysis/Product_price_finder copy.ipynb
+++ b/Data Analysis/Product_price_finder copy.ipynb
@@ -1,50 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_detail={\n",
-    "\"prce_reg_ymd\" : \"가격등록일자\",\n",
-    "- mrkt_esnt_no : 시장고유번호\n",
-    "- mrkt_code : 시장코드\n",
-    "- mrkt_nm : 시장명\n",
-    "- ctnp_code : 시도코드\n",
-    "- ctnp_nm : 시도명\n",
-    "- sggu_code : 시군구코드\n",
-    "- sggu_nm : 시군구명\n",
-    "- pdlt_code : 품목코드\n",
-    "- pdlt_nm : 품목명\n",
-    "- spcs_code : 품종코드\n",
-    "- spcs_nm : 품종명\n",
-    "- wsrt_exmn_se_code : 도소매조사구분코드\n",
-    "- exmn_se_nm : 조사구분명\n",
-    "- bulk_grad_code : 산물등급코드\n",
-    "- bulk_grad_nm : 산물등급명\n",
-    "- pdlt_prce : 품목가격\n",
-    "- mtc_smt_unit_mg : 산지출하단위크기\n",
-    "- mtc_smt_unit_nm : 산지출하단위명\n",
-    "- whsl_smt_unit_mg : 도매출하단위크기\n",
-    "- whsl_smt_unit_nm : 도매출하단위명\n",
-    "- rtsl_smt_unit_mg : 소매출하단위크기\n",
-    "- rtsl_smt_unit_nm : 소매출하단위명\n",
-    "- evfd_fmpd_smt_unit_mg : 친환경농산물출하단위크기\n",
-    "- evfd_fmpd_smt_unit_nm : 친환경농산물출하단위명\n",
-    "- dcnt_prce_yn : 할인가격여부\n",
-    "- etl_ldg_dt : ETL적재일시\n",
-    "}"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -69,7 +25,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_detail={\n",
+    "'prce_reg_ymd' : '가격등록일자',\n",
+    "'mrkt_esnt_no' : '시장고유번호',\n",
+    "'mrkt_code' : '시장코드',\n",
+    "'mrkt_nm' : '시장명',\n",
+    "'ct_code' : '시도코드',\n",
+    "'ctnp_nm' : '시도명',\n",
+    "'sggu_code' : '시군구코드',\n",
+    "'sggu_nm' : '시군구명',\n",
+    "'pdlt_code' : '품목코드',\n",
+    "'pdlt_nm' : '품목명',\n",
+    "'spcs_code' : '품종코드',\n",
+    "'spcs_nm' : '품종명',\n",
+    "'wsrt_exmn_se_code' : '도소매조사구분코드',\n",
+    "'exmn_se_nm' : '조사구분명',\n",
+    "'bulk_grad_code' : '산물등급코드',\n",
+    "'bulk_grad_nm' : '산물등급명',\n",
+    "'pdlt_prce' : '품목가격',\n",
+    "'mtc_smt_unit_mg' : '산지출하단위크기',\n",
+    "'mtc_smt_unit_nm' : '산지출하단위명',\n",
+    "'whsl_smt_unit_mg' : '도매출하단위크기',\n",
+    "'whsl_smt_unit_nm' : '도매출하단위명',\n",
+    "'rtsl_smt_unit_mg' : '소매출하단위크기',\n",
+    "'rtsl_smt_unit_nm' : '소매출하단위명',\n",
+    "'evfd_fmpd_smt_unit_mg' : '친환경농산물출하단위크기',\n",
+    "'evfd_fmpd_smt_unit_nm' : '친환경농산물출하단위명',\n",
+    "'dcnt_prce_yn' : '할인가격여부',\n",
+    "'etl_ldg_dt' : 'ETL적재일시'\n",
+    "}ㅌㅁ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +72,6 @@
     "import matplotlib.pyplot as plt\n",
     "import koreanize_matplotlib\n",
     "%config InlineBackend.figure_format = 'retina'\n",
-    "\n",
     "\n",
     "root_path = \"../\"\n",
     "data_path = f\"{root_path}data\""
@@ -97,9 +89,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['관측지점정보.csv',\n",
+       " 'Economic_growth_rate_20052021.xlsx',\n",
+       " '생산자물가지수_품목별_연도별.xlsx',\n",
+       " '생산자물가지수_품목별_연도별_월별.xlsx',\n",
+       " '소비자물가지수_품목별_연도별.xlsx',\n",
+       " '소비자물가지수_품목별_연도별_월별.xlsx',\n",
+       " '주요경제지표_20052021.xlsx',\n",
+       " 'output',\n",
+       " 'TB_TAT_KAMIS_PRC_MK_TB',\n",
+       " '기상청25_작물별_농업주산지_상세날씨_조회서비스_오픈API활용가이드',\n",
+       " '작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05.xlsx',\n",
+       " '~$작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05.xlsx']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.listdir(data_path)"
@@ -107,16 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[WinError 433] 없는 장치를 지정했습니다: 'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m files \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49mlistdir(\u001b[39m'\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 433] 없는 장치를 지정했습니다: 'data'"
+     ]
+    }
+   ],
    "source": [
     "files = os.listdir('data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -195,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -214,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -294,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -315,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
