--- a/Data Collection/FmlandWthrInfo.ipynb
+++ b/Data Collection/FmlandWthrInfo.ipynb
@@ -24,7 +24,48 @@
     "\n",
     "### 데이터 설명\n",
     "\n",
-    "- 농작물(36종) 주산지의 현재 날씨 및 동네예보 정보와 과거날씨 통계(일별, 순별, 월별) 정보 제공"
+    "- 농작물(36종) 주산지의 현재 날씨 및 동네예보 정보와 과거날씨 통계(일별, 순별, 월별) 정보 제공\n",
+    "\n",
+    "### 요청변수(Request Parameter)\n",
+    "\n",
+    "|항목명(국문)|항목명(영문)|항목크기|항목구분|샘플데이터|항목설명|\n",
+    "|---|---|---|---|---|---|\n",
+    "|서비스키|ServiceKey|4|필수|-|공공데이터포털에서 받은 인증키|\n",
+    "|페이지 번호|pageNo|4|필수|1|페이지번호|\n",
+    "|한 페이지 결과 수|numOfRows|4|필수|10|한 페이지 결과 수|\n",
+    "|응답자료형식|dataType|4|옵션|XML|요청자료형식(XML/JSON)|\n",
+    "|시작 연월일|ST_YMD|`0|필수|20161201|일통계 시작 날짜(YYYYMMDD)|\n",
+    "|종료 연월일|ED_YMD|10|필수|20161201|일통계 종료 날짜(YYYYMMDD)|\n",
+    "|지역 아이디|AREA_ID|10|필수|4122000000|지역 아이디(활용가이드 하단첨부 참고)|\n",
+    "|작물별 특성 아이디|PA_CROP_SPE_ID|10|필수|PA130201|주산지 작물별 특성 아이디(활용가이드 하단첨부 참고)|\n",
+    "\n",
+    "\n",
+    "### 출력결과(Response Element)\n",
+    "\n",
+    "|항목명(국문)|항목명(영문)|항목크기|항목구분|샘플데이터|항목설명|\n",
+    "|---|---|---|---|---|---|\n",
+    "|결과코드|resultCode|2|필수|0|결과코드|\n",
+    "|결과메시지|resultMsg|50|필수|OK|결과메시지|\n",
+    "|한 페이지 결과 수|numOfRows|4|필수|10|한 페이지 결과 수|\n",
+    "|페이지 번호|pageNo|4|필수|1|페이지번호|\n",
+    "|전체 결과 수|totalCount|4|필수|3|전체 결과 수|\n",
+    "|데이터 타입|dataType|4|필수|XML|응답자료형식 (XML/JSON)|\n",
+    "|연원일|ymd|10|필수|20161201|일통계 날짜|\n",
+    "|지역 아이디|areaId|10|필수|4827000001|지역 아이디|\n",
+    "|지역 이름|areaName|50|필수|평택|지역 이름|\n",
+    "|작물 명|paCropName|20|필수|무|주산지 작물 이름|\n",
+    "|작물별 특성아이디|paCropSpeId|10|필수|PA020101|작물별 특성 아이디|\n",
+    "|작물별 특성 이름|paCropSpeName|20|필수|봄|주산지 작물별 특성 이름|\n",
+    "|일 평균기온|dayAvgTa|5|필수|24.5|일 평균기온|\n",
+    "|일 최고기온|dayMaxTa|5|필수|30|일 최고기온|\n",
+    "|일 최저기온|dayMinTa|5|필수|22|일 최저기온|\n",
+    "|일 평균상대습도|dayAvgRhm|5|필수|85|일 평균상대습도|\n",
+    "|일 최저상대습도|dayMinRhm|5|필수|60|일 최저상대습도|\n",
+    "|일 강수량|daySumRn|5|필수|25|일 강수량|\n",
+    "|일 평균풍속|dayAvgWs|5|필수|4|일 평균풍속|\n",
+    "|일 누적일조시간|daySumSs|5|필수|4|일 누적일조시간|\n",
+    "|특보 발효 여부|wmCount|4|필수|1|과거특보 발효여부(0:없음, 1:있음)|\n",
+    "|특보 코드|wmCd|8|필수|W2|특보 코드|\n"
    ]
   },
   {
