--- a/Data Collection/FmlandWthrInfo.ipynb
+++ b/Data Collection/FmlandWthrInfo.ipynb
@@ -929,6 +929,15 @@
     "    )\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(start(prop(\"날짜\")) == end(prop(\"날짜\")), formatDate(start(prop(\"날짜\")), \"ddd\"), concat(formatDate(start(prop(\"날짜\")), \"ddd\"), \" → \", formatDate(end(prop(\"날짜\")), \"ddd\")))"
+   ]
   }
  ],
  "metadata": {
