--- a/Data Analysis/Product_price_finder.ipynb
+++ b/Data Analysis/Product_price_finder.ipynb
@@ -451,15 +451,6 @@
    "source": [
     "Finder()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asdasdasd"
-   ]
   }
  ],
  "metadata": {
@@ -478,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
