Add data details
소비자 물가지수

--- a/Data Collection/AgriMarket.ipynb
+++ b/Data Collection/AgriMarket.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +19,21 @@
     "\n",
     "- 일반농산물 도매 69품목 116품종, 소매 90품목 143품종 및 친환경농산물 38품목 44종 대상 가격 자료\n",
     "\n",
-    "### 컬럼 설명"
+    "\n",
+    "## 소비자 물가지수 \n",
+    "\n",
+    "\n",
+    "- Data Source : [국가통계포털](https://kosis.kr/statHtml/statHtml.do?orgId=101&tblId=DT_1J20112&conn_path=I2)\n",
+    "\n",
+    "- Collection Method : Download\n",
+    "\n",
+    "- Data Format : CSV\n",
+    "\n",
+    "### 데이터 설명\n",
+    "\n",
+    "- 농산물 중 필수재라고 판단되는 곡물,채소 포함\n",
+    "\n",
+    "- 사치재인 과실, 기타 농산물 제외"
    ]
   },
   {
@@ -441,7 +454,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "asd1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -455,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
