갱신, 사용하지 않는 기상정보 삭제.

--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -332,84 +332,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>603</th>\n",
-       "      <td>4888000000</td>\n",
-       "      <td>거창</td>\n",
-       "      <td>PA060101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>녹두</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>4165000000</td>\n",
-       "      <td>포천</td>\n",
-       "      <td>PA220101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>시금치</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>2915500000</td>\n",
-       "      <td>남구</td>\n",
-       "      <td>PA150101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>방울토마토</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>4272000000</td>\n",
-       "      <td>홍천</td>\n",
-       "      <td>PA330101</td>\n",
-       "      <td>적두</td>\n",
-       "      <td>팥</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>657</th>\n",
-       "      <td>4281000000</td>\n",
-       "      <td>인제</td>\n",
-       "      <td>PA020201</td>\n",
-       "      <td>고랭지</td>\n",
-       "      <td>감자</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>532</th>\n",
-       "      <td>4167000000</td>\n",
-       "      <td>여주</td>\n",
-       "      <td>PA090201</td>\n",
-       "      <td>여름대파</td>\n",
-       "      <td>대파</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>277</th>\n",
-       "      <td>2632000000</td>\n",
-       "      <td>북구</td>\n",
-       "      <td>PA170201</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273</th>\n",
-       "      <td>2620000000</td>\n",
-       "      <td>영도구</td>\n",
-       "      <td>PA170201</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>4159000000</td>\n",
-       "      <td>화성</td>\n",
+       "      <th>39</th>\n",
+       "      <td>4213000000</td>\n",
+       "      <td>원주</td>\n",
        "      <td>PA340101</td>\n",
        "      <td>캠벨얼리</td>\n",
        "      <td>포도</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>536</th>\n",
-       "      <td>4311100000</td>\n",
-       "      <td>청주</td>\n",
-       "      <td>PA090201</td>\n",
-       "      <td>여름대파</td>\n",
+       "      <th>271</th>\n",
+       "      <td>2614000000</td>\n",
+       "      <td>서구</td>\n",
+       "      <td>PA170201</td>\n",
+       "      <td>봄</td>\n",
+       "      <td>배추</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>555</th>\n",
+       "      <td>2623000000</td>\n",
+       "      <td>부산진구</td>\n",
+       "      <td>PA080301</td>\n",
+       "      <td>가을</td>\n",
+       "      <td>당근</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4282000000</td>\n",
+       "      <td>고성</td>\n",
+       "      <td>PA360101</td>\n",
+       "      <td>애호박</td>\n",
+       "      <td>호박</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>2653000000</td>\n",
+       "      <td>사상구</td>\n",
+       "      <td>PA090101</td>\n",
+       "      <td>봄대파</td>\n",
        "      <td>대파</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>4148000000</td>\n",
+       "      <td>파주</td>\n",
+       "      <td>PA230101</td>\n",
+       "      <td>일반계</td>\n",
+       "      <td>쌀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>4377000000</td>\n",
+       "      <td>음성</td>\n",
+       "      <td>PA100101</td>\n",
+       "      <td>-</td>\n",
+       "      <td>들깨</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>4159000000</td>\n",
+       "      <td>화성</td>\n",
+       "      <td>PA230101</td>\n",
+       "      <td>일반계</td>\n",
+       "      <td>쌀</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>4155000000</td>\n",
+       "      <td>안성</td>\n",
+       "      <td>PA160101</td>\n",
+       "      <td>-</td>\n",
+       "      <td>배</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>4790000000</td>\n",
+       "      <td>예천</td>\n",
+       "      <td>PA200101</td>\n",
+       "      <td>-</td>\n",
+       "      <td>사과</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -417,16 +417,16 @@
       ],
       "text/plain": [
        "         지역_아이디 지역_이름 주산지_작물_특성_아이디 주산지_작물_특성_이름 주산지_작물명\n",
-       "603  4888000000    거창      PA060101            -      녹두\n",
-       "211  4165000000    포천      PA220101            -     시금치\n",
-       "382  2915500000    남구      PA150101            -   방울토마토\n",
-       "55   4272000000    홍천      PA330101           적두       팥\n",
-       "657  4281000000    인제      PA020201          고랭지      감자\n",
-       "532  4167000000    여주      PA090201         여름대파      대파\n",
-       "277  2632000000    북구      PA170201            봄      배추\n",
-       "273  2620000000   영도구      PA170201            봄      배추\n",
-       "35   4159000000    화성      PA340101         캠벨얼리      포도\n",
-       "536  4311100000    청주      PA090201         여름대파      대파"
+       "39   4213000000    원주      PA340101         캠벨얼리      포도\n",
+       "271  2614000000    서구      PA170201            봄      배추\n",
+       "555  2623000000  부산진구      PA080301           가을      당근\n",
+       "5    4282000000    고성      PA360101          애호박      호박\n",
+       "516  2653000000   사상구      PA090101          봄대파      대파\n",
+       "178  4148000000    파주      PA230101          일반계       쌀\n",
+       "499  4377000000    음성      PA100101            -      들깨\n",
+       "181  4159000000    화성      PA230101          일반계       쌀\n",
+       "340  4155000000    안성      PA160101            -       배\n",
+       "253  4790000000    예천      PA200101            -      사과"
       ]
      },
      "metadata": {},
@@ -445,17 +445,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 컬럼'지역_아이디'가 int형식으로 되어있는데, 자리수가 안맞는 행이 있는지 확인해야함.\n",
-    "df = df_code_raw.copy()"
+    "df = df_code_raw.copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -463,20 +463,42 @@
       "text/plain": [
        "array([2711000000, 2714000000, 2717000000, 2720000000, 2723000000,\n",
        "       2726000000, 2729000000, 2771000000, 4272000000, 4276000000,\n",
-       "       4277000000, 4421000000, 4421000000, 4677000000, 4680000000,\n",
-       "       4682000000, 4682000000, 4684000000, 4684000000, 4690000000,\n",
-       "       4690000000, 4719000000, 4775000000, 4776000000, 4825000000,\n",
-       "       4827000000, 5011000000, 5013000000], dtype=int64)"
+       "       4277000000, 4421000000, 4677000000, 4680000000, 4682000000,\n",
+       "       4684000000, 4690000000, 4719000000, 4775000000, 4776000000,\n",
+       "       4825000000, 4827000000, 5011000000, 5013000000], dtype=int64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Crop = df[df[\"주산지_작물명\"] == \"양배추\"][\"지역_아이디\"]\n",
-    "df_Crop.values"
+    "df = df_code_raw.copy()\n",
+    "df = df[df[\"주산지_작물명\"] == \"양배추\"][\"지역_아이디\"]\n",
+    "df.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PA240101', 'PA240201', 'PA240301', 'PA240401'], dtype=object)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df_code_raw.copy()\n",
+    "df = df[df[\"주산지_작물명\"] == \"양배추\"][\"주산지_작물_특성_아이디\"]\n",
+    "df.unique()"
    ]
   },
   {
