--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,10 @@
     "sys.path.append(\"../Import\")\n",
     "import auth\n",
     "\n",
-    "authkey = auth.authkey[\"FmlandWthrInfo_dec\"]"
+    "authkey = auth.authkey[\"FmlandWthrInfo_dec\"]\n",
+    "\n",
+    "root_path = \"../\"\n",
+    "data_path = f\"{root_path}data/\""
    ]
   },
   {
@@ -117,9 +120,12 @@
     "### 문제 해결 방안\n",
     "\n",
     "- 문제1\n",
+    "\n",
     "    1. 모든 작물_특성을 사용.\n",
     "\n",
+    "\n",
     "- 문제2\n",
+    "\n",
     "    1. 모든 지역의 기상 데이터를 평균으로 계산\n",
     "    2. 모든 지역 중 생산량 상위 n개 또는 n%를 평균 또는 가중치를 부여하여 계산\n",
     "\n",
@@ -436,7 +442,7 @@
    "source": [
     "# 작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05\n",
     "\n",
-    "df_code_raw = pd.read_excel(\"../data/작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05.xlsx\")\n",
+    "df_code_raw = pd.read_excel(f\"{data_path}작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05.xlsx\")\n",
     "print(df_code_raw.info())\n",
     "display(df_code_raw.describe())\n",
     "display(df_code_raw.describe(include=\"object\"))\n",
@@ -450,7 +456,7 @@
    "outputs": [],
    "source": [
     "# 컬럼'지역_아이디'가 int형식으로 되어있는데, 자리수가 안맞는 행이 있는지 확인해야함.\n",
-    "df = df_code_raw.copy()\n"
+    "df = df_code_raw.copy()"
    ]
   },
   {
@@ -499,6 +505,73 @@
     "df = df_code_raw.copy()\n",
     "df = df[df[\"주산지_작물명\"] == \"양배추\"][\"주산지_작물_특성_아이디\"]\n",
     "df.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2711000000, 2714000000, 2717000000, 2720000000, 2723000000,\n",
+       "       2726000000, 2729000000, 2771000000, 4421000000, 4677000000,\n",
+       "       4719000000, 4825000000, 4827000000], dtype=int64)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df_code_raw.copy()\n",
+    "df = df[df[\"주산지_작물_특성_아이디\"] == \"PA240101\"][\"지역_아이디\"]\n",
+    "df.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['총지수', '농축수산물', '(농산물)곡물', '쌀', '현미', '찹쌀', '보리쌀', '콩', '땅콩',\n",
+       "       '혼식곡', '(농산물)채소', '배추', '상추', '시금치', '양배추', '미나리', '깻잎', '부추', '무',\n",
+       "       '열무', '당근', '감자', '고구마', '도라지', '콩나물', '버섯', '오이', '풋고추', '호박',\n",
+       "       '가지', '토마토', '파', '양파', '마늘', '브로콜리', '고사리', '파프리카', '생강',\n",
+       "       '(농산물)과실', '사과', '배', '복숭아', '포도', '밤', '감', '귤', '오렌지', '참외',\n",
+       "       '수박', '딸기', '바나나', '키위'], dtype=object)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path = f\"{data_path}소비자물가지수_품목별_연도별_월별_filtered.csv\"\n",
+    "df_filtered = pd.read_csv(file_path)\n",
+    "df_filtered[\"품목별\"].map(lambda x:x.strip(('\\u3000'))).values"
    ]
   },
   {
