--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,10 +91,13 @@
     "# 'auth' is included in gitignore.\n",
     "import sys\n",
     "\n",
+    "\n",
     "sys.path.append(\"../Import\")\n",
     "import auth\n",
+    "import var\n",
     "\n",
     "authkey = auth.authkey[\"FmlandWthrInfo_dec\"]\n",
+    "corp_list = var.crop_list\n",
     "\n",
     "root_path = \"../\"\n",
     "data_path = f\"{root_path}data/\""
@@ -139,304 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 681 entries, 0 to 680\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column         Non-Null Count  Dtype \n",
-      "---  ------         --------------  ----- \n",
-      " 0   지역_아이디         681 non-null    int64 \n",
-      " 1   지역_이름          681 non-null    object\n",
-      " 2   주산지_작물_특성_아이디  681 non-null    object\n",
-      " 3   주산지_작물_특성_이름   681 non-null    object\n",
-      " 4   주산지_작물명        681 non-null    object\n",
-      "dtypes: int64(1), object(4)\n",
-      "memory usage: 26.7+ KB\n",
-      "None\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# 작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m df_code_raw \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_excel(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mdata_path\u001b[39m}\u001b[39;00m\u001b[39m작물별_농업주산지_상세날씨_조회서비스__지역코드_22.05.xlsx\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(df_code_raw\u001b[39m.\u001b[39minfo())\n\u001b[0;32m      5\u001b[0m display(df_code_raw\u001b[39m.\u001b[39mdescribe())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>지역_아이디</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>681.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4131752619.677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>775162282.803</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2611000000.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4146100000.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4415000000.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>4688000000.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>5013000000.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              지역_아이디\n",
-       "count        681.000\n",
-       "mean  4131752619.677\n",
-       "std    775162282.803\n",
-       "min   2611000000.000\n",
-       "25%   4146100000.000\n",
-       "50%   4415000000.000\n",
-       "75%   4688000000.000\n",
-       "max   5013000000.000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>지역_이름</th>\n",
-       "      <th>주산지_작물_특성_아이디</th>\n",
-       "      <th>주산지_작물_특성_이름</th>\n",
-       "      <th>주산지_작물명</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>681</td>\n",
-       "      <td>681</td>\n",
-       "      <td>681</td>\n",
-       "      <td>681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique</th>\n",
-       "      <td>152</td>\n",
-       "      <td>62</td>\n",
-       "      <td>31</td>\n",
-       "      <td>36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>top</th>\n",
-       "      <td>동구</td>\n",
-       "      <td>PA200101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>freq</th>\n",
-       "      <td>16</td>\n",
-       "      <td>36</td>\n",
-       "      <td>237</td>\n",
-       "      <td>63</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       지역_이름 주산지_작물_특성_아이디 주산지_작물_특성_이름 주산지_작물명\n",
-       "count    681           681          681     681\n",
-       "unique   152            62           31      36\n",
-       "top       동구      PA200101            -      배추\n",
-       "freq      16            36          237      63"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>지역_아이디</th>\n",
-       "      <th>지역_이름</th>\n",
-       "      <th>주산지_작물_특성_아이디</th>\n",
-       "      <th>주산지_작물_특성_이름</th>\n",
-       "      <th>주산지_작물명</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>4213000000</td>\n",
-       "      <td>원주</td>\n",
-       "      <td>PA340101</td>\n",
-       "      <td>캠벨얼리</td>\n",
-       "      <td>포도</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271</th>\n",
-       "      <td>2614000000</td>\n",
-       "      <td>서구</td>\n",
-       "      <td>PA170201</td>\n",
-       "      <td>봄</td>\n",
-       "      <td>배추</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>555</th>\n",
-       "      <td>2623000000</td>\n",
-       "      <td>부산진구</td>\n",
-       "      <td>PA080301</td>\n",
-       "      <td>가을</td>\n",
-       "      <td>당근</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>4282000000</td>\n",
-       "      <td>고성</td>\n",
-       "      <td>PA360101</td>\n",
-       "      <td>애호박</td>\n",
-       "      <td>호박</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>516</th>\n",
-       "      <td>2653000000</td>\n",
-       "      <td>사상구</td>\n",
-       "      <td>PA090101</td>\n",
-       "      <td>봄대파</td>\n",
-       "      <td>대파</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>4148000000</td>\n",
-       "      <td>파주</td>\n",
-       "      <td>PA230101</td>\n",
-       "      <td>일반계</td>\n",
-       "      <td>쌀</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>4377000000</td>\n",
-       "      <td>음성</td>\n",
-       "      <td>PA100101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>들깨</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>4159000000</td>\n",
-       "      <td>화성</td>\n",
-       "      <td>PA230101</td>\n",
-       "      <td>일반계</td>\n",
-       "      <td>쌀</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>340</th>\n",
-       "      <td>4155000000</td>\n",
-       "      <td>안성</td>\n",
-       "      <td>PA160101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>배</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>253</th>\n",
-       "      <td>4790000000</td>\n",
-       "      <td>예천</td>\n",
-       "      <td>PA200101</td>\n",
-       "      <td>-</td>\n",
-       "      <td>사과</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         지역_아이디 지역_이름 주산지_작물_특성_아이디 주산지_작물_특성_이름 주산지_작물명\n",
-       "39   4213000000    원주      PA340101         캠벨얼리      포도\n",
-       "271  2614000000    서구      PA170201            봄      배추\n",
-       "555  2623000000  부산진구      PA080301           가을      당근\n",
-       "5    4282000000    고성      PA360101          애호박      호박\n",
-       "516  2653000000   사상구      PA090101          봄대파      대파\n",
-       "178  4148000000    파주      PA230101          일반계       쌀\n",
-       "499  4377000000    음성      PA100101            -      들깨\n",
-       "181  4159000000    화성      PA230101          일반계       쌀\n",
-       "340  4155000000    안성      PA160101            -       배\n",
-       "253  4790000000    예천      PA200101            -      사과"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1234,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
