--- a/Data Collection/crop_list.ipynb
+++ b/Data Collection/crop_list.ipynb
@@ -83,8 +83,8 @@
     "file_path = f\"{data_path}소비자물가지수_품목별_연도별_월별_filtered.csv\"\n",
     "df_filtered = pd.read_csv(file_path)\n",
     "\n",
-    "corp_list = list(df_filtered[\"품목별\"].map(lambda x:x.strip(('\\u3000'))).values)\n",
-    "pprint(corp_list)"
+    "crop_list = list(df_filtered[\"품목별\"].map(lambda x:x.strip(('\\u3000'))).values)\n",
+    "pprint(crop_list)"
    ]
   },
   {
@@ -150,9 +150,9 @@
     "remove_list = ['총지수', '농축수산물', '(농산물)곡물', '(농산물)채소', '(농산물)과실']\n",
     "\n",
     "for i in remove_list:\n",
-    "    corp_list.remove(i)\n",
+    "    crop_list.remove(i)\n",
     "\n",
-    "pprint(corp_list)"
+    "pprint(crop_list)"
    ]
   }
  ],
@@ -172,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
