--- a/Data Collection/AgriWeather.ipynb
+++ b/Data Collection/AgriWeather.ipynb
@@ -70,9 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "w:\\내 드라이브\\[2022_0914~2023_0113]    Likelion AI School 7\\_1_corazzon - Data Analytics with Python\\_project\\Agricultural-Products-Price-Prediction-\\Data Collection\\../Import\\var.py\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from pprint import pprint\n",
@@ -94,13 +103,36 @@
     "\n",
     "sys.path.append(\"../Import\")\n",
     "import auth\n",
-    "import var\n",
+    "import definitions\n",
     "\n",
     "authkey = auth.authkey[\"FmlandWthrInfo_dec\"]\n",
-    "corp_list = var.crop_list\n",
+    "corp_list = definitions.crop_list\n",
     "\n",
     "root_path = \"../\"\n",
-    "data_path = f\"{root_path}data/\""
+    "data_path = f\"{root_path}data/\"\n",
+    "\n",
+    "# test\n",
+    "definitions.test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'w:\\\\내 드라이브\\\\[2022_0914~2023_0113]    Likelion AI School 7\\\\_1_corazzon - Data Analytics with Python\\\\_project\\\\Agricultural-Products-Price-Prediction-\\\\Data Collection'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath(os.curdir)"
    ]
   },
   {
